# SuperZip

./: .clang-format  .gitattributes  .gitignore  .pymarkdown.json  .ruff.toml  .semgrepignore  .yamllint  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/openvas/: openvas_scan.gmp.py
.github/requirements/: gvm-tools-linux.txt  requirements-lint-windows.txt  requirements-semgrep-linux.txt  zizmor-linux.txt
.github/workflows/: beta-release.yml  dependency-review.yml  fuzzing.yml  greenbone-openvas-live.yml  greenbone-openvas-vulnetix.yml  lint.yml  release.yml  scorecard.yml  security-code-scanning.yml  vulnetix-openvas.yml  windows-ci.yml
cmake/: superzip-runtime-dependencies.json.in  superzip_desktop_shortcut.wxs  superzip_wix_patch.xml
docs/: archive-format-support.md  compression-backend-evaluation.md  compression-level-and-benchmark-suite.md  debugging-strategy.md  design.md  development-transfer-diagnostics.md  engineering-learning-loop.md  gpu-accelerated-ui-and-codec-research.md  gpu-crc-integrity-research.md  native-suzip-format.md  performance-block-size-validation.md  portability.md  product-behavior-audit.md  refactoring-governance.md  release.md  security-code-scanning.md  security.md  targeted-verification.md  third-party.md
docs/benchmarks/: 2026-06-15-ram-block-size-sweep.md  2026-06-15-ram-level5-benchmark-suite.md  2026-06-17-all-workload-raw-crc-fast-path.md  2026-06-17-hip-crc-repeat-and-windowed-ram-benchmark.md  2026-06-18-owned-raw-payload-encode.md  2026-06-18-repeat-ram-gpu-benchmark.md  2026-06-18-segmented-decode-materialization.md  2026-06-18-system-monitor-ui-and-mixed-baseline.md
fuzz/: arc_fuzzer.cpp  archive_index_fuzzer.cpp  arj_fuzzer.cpp  cab_header_fuzzer.cpp  cpio_fuzzer.cpp  iso_fuzzer.cpp  lha_fuzzer.cpp  lzip_fuzzer.cpp  lzma_fuzzer.cpp  macbinary_fuzzer.cpp  path_safety_fuzzer.cpp  rpm_header_fuzzer.cpp  sevenzip_fuzzer.cpp  superzip.dict  superzip_arj_fuzzer.options  superzip_macbinary_fuzzer.options  superzip_path_safety_fuzzer.options  superzip_rpm_header_fuzzer.options  xar_fuzzer.cpp
mcp/: superzip_mcp.py
resources/licenses/: license-notices.json
src/app/: SuperZip.manifest  SuperZip.manifest.in  SuperZip.rc  drop_payload.hpp  log_policy.hpp  log_retention.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window_archive_support.cpp  main_window_commands.cpp  main_window_controls.cpp  main_window_dragdrop.cpp  main_window_dropdowns.cpp  main_window_extract_jobs.cpp  main_window_focus.cpp  main_window_folder_size.cpp  main_window_impl.hpp  main_window_input.cpp  main_window_layout.cpp  main_window_layout.hpp  main_window_license_dialog.cpp  main_window_monitor.cpp  main_window_page_clicks.cpp  main_window_pages.cpp  main_window_queue_interaction.cpp  main_window_render_support.cpp  main_window_settings_timers.cpp  main_window_shell_render.cpp  main_window_startup_support.cpp  main_window_state.hpp  main_window_support.hpp  resource.h
src/ar/: ar_adapter.cpp  ar_adapter.hpp
src/arc/: arc_adapter.cpp  arc_adapter.hpp
src/arj/: arj_adapter.cpp  arj_adapter.hpp
src/base64/: base64_adapter.cpp  base64_adapter.hpp
src/bzip2/: bzip2_adapter.cpp  bzip2_adapter.hpp  bzip2_stream.cpp  bzip2_stream.hpp
src/cab/: cab_adapter.cpp  cab_adapter.hpp  cab_format.cpp  cab_format.hpp
src/cli/: main.cpp  memory_benchmark.cpp  memory_benchmark.hpp
src/core/: archive.cpp  archive.hpp  archive_block_types.hpp  archive_blocks.cpp  archive_blocks.hpp  archive_format.cpp  archive_format.hpp  archive_index.cpp  archive_index.hpp  checksum.cpp  checksum.hpp  defender_scan.cpp  defender_scan.hpp  file_manifest.cpp  file_manifest.hpp  file_publish.cpp  file_publish.hpp  integrity.cpp  integrity.hpp  path_safety.cpp  path_safety.hpp  progress.cpp  progress.hpp  resource_limit_checks.hpp  resource_limits.hpp  resource_usage.cpp  resource_usage.hpp  result.hpp
src/cpio/: cpio_adapter.cpp  cpio_adapter.hpp
src/gpu/: gpu_codec.cpp  gpu_codec.hpp  gpu_codec_cpu.cpp  hip_codec.hip.cpp  hip_codec_adaptive_prefix.hip.cpp  hip_codec_static_prefix.hip.cpp  hip_codec_support.hpp  hip_device.cpp
src/gzip/: gzip_adapter.cpp  gzip_adapter.hpp  gzip_stream.cpp  gzip_stream.hpp
src/hqx/: hqx_adapter.cpp  hqx_adapter.hpp
src/iso/: iso_adapter.cpp  iso_adapter.hpp
src/lha/: lha_adapter.cpp  lha_adapter.hpp
src/lzip/: lzip_adapter.cpp  lzip_adapter.hpp  lzip_stream.cpp  lzip_stream.hpp
src/lzma/: lzma_adapter.cpp  lzma_adapter.hpp
src/macbinary/: macbinary_adapter.cpp  macbinary_adapter.hpp
src/rpm/: rpm_adapter.cpp  rpm_adapter.hpp  rpm_format.cpp  rpm_format.hpp
src/sevenzip/: sevenzip_adapter.cpp  sevenzip_adapter.hpp
src/tar/: tar_adapter.cpp  tar_adapter.hpp
src/unix_compress/: unix_compress_adapter.cpp  unix_compress_adapter.hpp
src/uue/: uue_adapter.cpp  uue_adapter.hpp
src/wim/: wim_adapter.cpp  wim_adapter.hpp
src/xar/: xar_adapter.cpp  xar_adapter.hpp
src/xxe/: xxe_adapter.cpp  xxe_adapter.hpp
src/xz/: xz_adapter.cpp  xz_adapter.hpp  xz_stream.cpp  xz_stream.hpp
tools/: SuperZip.GuiSmoke.Ui.psm1  bench.ps1  bootstrap_lint_env.ps1  build.ps1  compatibility_interop_smoke.ps1  compile_hip_object.ps1  format_matrix_smoke.ps1  fuzz.ps1  generate_app_icon.ps1  generate_brand_logo_header.ps1  generate_license_notices_header.ps1  github_post_push_audit.ps1  gpu_diagnostic.ps1  gpu_proof.ps1  gui_smoke.ps1  install_wix.ps1  lint.ps1  new_cab_smoke_fixture.ps1  new_iso_smoke_fixture.ps1  new_rpm_smoke_fixture.ps1  package.ps1  refactor_audit.ps1  release_metadata.py  security_scan.ps1  storage_smoke.ps1  superzip_brand_logo.psm1  superzip_verification.psm1  test.ps1  test_msi_identity.ps1  test_verification_selector.ps1  transfer_diagnostics.ps1  verification_plan.ps1  verify_brand_assets.ps1  verify_change_hygiene.ps1  verify_changes.ps1  verify_license_notices.ps1  version.ps1  wait_relevant_workflows.ps1
(+56 files in other folders)
